--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-wysiwyg",
   "version": "1.2.2",
   "description": "AngularJS WYSIWYG editor",
-  "main": "./dist/angular-azure-wysiwyg.min.js",
+  "main": "./dist/angular-wysiwyg.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
